--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="icon" type="image/png" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='75' font-size='75'>👤</text></svg>">
     <link rel="canonical" href="https://stevenholtman.com">
 
-    <title>Steven Holtman</title>
+    <title>Mama Soph</title>
     <script src="profile.js"></script>
     <link rel="stylesheet" href="styles.css">
     <style>
