--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Steven Holtman - L3 Engineer & Project Manager. 19+ years IT experience specializing in infrastructure, security, automation, and project management.">
+    <meta name="description" content="Mama Soph - L3 Engineer & Project Manager. 19+ years IT experience specializing in infrastructure, security, automation, and project management.">
     <meta name="theme-color" content="#667eea">
     <meta name="keywords" content="engineer, project manager, IT, infrastructure, cybersecurity, automation, network, DevOps, PowerShell">
 
     <!-- Open Graph Tags for Social Media Sharing -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://stevenholtman.com">
-    <meta property="og:title" content="Steven Holtman - L3 Engineer & Project Manager">
+    <meta property="og:url" content="https://mamasoph.com">
+    <meta property="og:title" content="Mama Soph - L3 Engineer & Project Manager">
     <meta property="og:description" content="19+ years IT experience specializing in infrastructure, security, automation, and project management. Explore my portfolio of projects, skills, and experience.">
     <meta property="og:image" content="https://stevenholtman.com/images/profile.jpeg">
     <meta property="og:image:width" content="1200">
@@ -19,8 +19,8 @@
 
     <!-- Twitter Card Tags -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://stevenholtman.com">
-    <meta property="twitter:title" content="Steven Holtman - L3 Engineer & Project Manager">
+    <meta property="twitter:url" content="https://mamasoph.com">
+    <meta property="twitter:title" content="Mama Soph - L3 Engineer & Project Manager">
     <meta property="twitter:description" content="19+ years IT experience specializing in infrastructure, security, automation, and project management.">
     <meta property="twitter:image" content="https://stevenholtman.com/images/profile.jpeg">
 
